--- a/app/templates/_errors.html
+++ b/app/templates/_errors.html
@@ -1,7 +1,9 @@
 {% macro render_field(field) %}
-<div class="form-group row">
-    <dt>{{field.label}}</dt>
-    <dd>{{field(**kwargs)|safe}}</dd>
+<div class="form-group">
+    {% if field.name != 'submit' %}
+    {{field.label}}
+    {% endif %}
+    {{field(**kwargs)|safe}}
 </div>
 {% if field.errors %}
 <ul class=errors>
