--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -26,6 +26,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href={{url_for('usuario.logout')}}>Sair</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href={{url_for('serie.listar')}}>Séries</a>
+                </li>
                 {% endif %}
             </ul>
         </div>
